







add_executable(select-sort select-sort.cpp)
add_executable(bubble-sort bubble-sort.cpp)  
add_executable(insertion-sort insertion-sort.cpp) 
add_executable(shell-sort shell-sort.cpp)  
add_executable(quick-sort quick-sort.cpp)   
add_executable(merge-sort merge-sort.cpp)  
add_executable(heap-sort heap-sort.cpp)  