







add_executable(select-sort select-sort.cpp)
add_executable(bubble-sort bubble-sort.cpp)  
add_executable(insertion-sort insertion-sort.cpp) 
add_executable(shell-sort shell-sort.cpp)  
add_executable(quick-sort quick-sort.cpp)   
add_executable(merge-sort merge-sort.cpp)  
add_executable(heap-sort heap-sort.cpp)   
add_executable(counting-sort counting-sort.cpp)  
add_executable(bucket-sort bucket-sort.cpp)   
add_executable(radix-sort radix-sort.cpp)    